modules/cli/src/test/resources/good/reach/globals/grecursion/Recursion17b.scr
module good.reach.globals.grecursion.Recursion17b;


global protocol Foo(role A, role B)
{
	rec Z
	{
		choice at A
		{
			rec X
			{
				1() from A to B;
			}
		}
		or
		{
			rec Y
			{
				2() from A to B;
				continue Y;
			}
		}
	}
	3() from A to B;
}
