modules/cli/src/test/resources/bad/reach/globals/grecursion/Recursion17e.scr
module bad.reach.globals.grecursion.Recursion17e;


global protocol Foo(role A, role B)
{
	rec Z
	{
		choice at A
		{
			rec X
			{
				1() from A to B;
			}
		}
		or
		{
			rec Y
			{
				2() from A to B;
				continue Z;
			}
		}
		4() from A to B;
	}
	3() from A to B;
}
